# Sigil

./: .dockerignore  .gitignore  README.md  SPEC.md  railway.json
builder/: Dockerfile  go.mod
builder/cmd/sigil-builder/: main.go
builder/internal/compiler/: compiler.go  compiler_test.go
builder/internal/crypto/: crypto.go  crypto_test.go
builder/internal/server/: server.go  server_test.go
builder/template/: go.mod
builder/template/cmd/identity/: main.go
builder/template/internal/keys/: keys.go
builder/template/internal/signer/: signer.go
cli/: go.mod
cli/cmd/sigil/: main.go
cli/internal/auth/: auth.go
cli/internal/enroll/: enroll.go
cli/internal/initcmd/: init.go
docs/plans/: 2026-04-01-sigil-v1-design.md  2026-04-01-sigil-v1-implementation.md
sdk/node/: package-lock.json  package.json
sdk/node/src/: auth.ts  builder.test.ts  builder.ts  index.ts  middleware.ts  sigil.test.ts  sigil.ts  types.ts
sdk/node/src/storage/: sqlite.test.ts  sqlite.ts
sdk/python/: pyproject.toml
sdk/python/sigil/: __init__.py  auth.py  builder.py  middleware.py  server.py  types.py
sdk/python/sigil/storage/: __init__.py  sqlite.py
sdk/python/tests/: test_server.py
test/e2e/: run.sh  server.ts
test/e2e/.home/.sigil/: agent_id  (+2 more)
web/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
web/src/: codewords.ts  config.ts  db.ts  index.ts  pending-tokens.ts  session.ts  sigil.ts
web/src/routes/: agent.ts  auth.ts  dashboard.ts  sigil.ts  whoami.ts
web/src/views/: agent.ts  dashboard.ts  layout.ts  login.ts
