[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-server"
version = "0.1.0"
description = "Device-bound identity for AI agents — server SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "PyJWT>=2.8",
    "cryptography>=41.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
postgres = ["asyncpg>=0.28"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "aiosqlite>=0.19"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
